html structure and scss added

--- a/index.html
+++ b/index.html
@@ -1,47 +1,250 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
 
-  <!-- Basic Page Needs
+    <!-- Basic Page Needs
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <meta charset="utf-8">
+    <title>Crewseekers – Yacht Crew Wanted</title>
+    <meta name="description" content="Micro Task">
+    <meta name="author" content="Eik Hunter">
+
+    <!-- Mobile Specific Metas
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- FONT
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+
+    <!-- CSS
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/skeleton.css">
+    <link rel="stylesheet" href="css/hamburgers.css">
+    <link rel="stylesheet" href="css/styles.css">
+
+    <!-- Scripts
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <script src="https://use.fontawesome.com/cd4dbaf2d1.js"></script>
+
+    <!-- Favicon
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <link rel="icon" type="image/png" href="images/favicon.png">
+
+  </head>
+
+  <body>
+
+    <!-- Header
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <header>
+      <nav>
+        <a class="logo u-pull-left" href="/">Crewseekers</a>
+        <p class="telephone">+44 (0) 238 115 9207</p>
+        <a class="btn joinbutton">Join Now</a>
+        <a class="btn loginbutton">Login</a>
+        <p class="navigate">Navigate</p>
+        <button class="hamburger" type="button">
+          <span class="hamburger-box">
+            <span class="hamburger-inner"></span>
+          </span>
+        </button>
+      </nav>
+    </header>
+
+    <!-- Primary Page Layout
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <section class="header_banner">
+      <div class="container">
+
+      </div>
+    </section>
+
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="eight columns">
+            <select>
+              <option value="volvo">Example 1</option>
+              <option value="saab">Example 2</option>
+              <option value="mercedes">Example 3</option>
+              <option value="audi">Example 4</option>
+            </select>
+            <select>
+              <option value="volvo">Example 1</option>
+              <option value="saab">Example 2</option>
+              <option value="mercedes">Example 3</option>
+              <option value="audi">Example 4</option>
+            </select>
+            <select>
+              <option value="volvo">Example 1</option>
+              <option value="saab">Example 2</option>
+              <option value="mercedes">Example 3</option>
+              <option value="audi">Example 4</option>
+            </select>
+            <div class="btn apply">Apply</div>
+          </div>
+          <div class="four columns">
+            <form>
+              <input type="text" placeholder="Search by boat reference" required>
+              <input type="button" value="Search">
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="container">
+        <p>52 sailing opportunities found All trip types : All locations : All qualifications</p>
+        <div class="u-pull-right">
+          <a href="#" class="previous">Prev</a>
+          <a href="#" class="next">Next</a>
+        </div>
+        <div class="row">
+          <div class="four columns">
+            <div class="opportunity">
+              <span class="image image_one"></span>
+              <h2></h2>
+              <p></p>
+              <p></p>
+              <a class="btn viewall" href="/"></a>
+            </div>
+            <div class="opportunity">
+              <span class="image image_two"></span>
+              <h1></h1>
+              <p></p>
+              <p></p>
+              <a class="btn viewall" href="/"></a>
+            </div>
+            <div class="opportunity">
+              <span class="image image_three"></span>
+              <h1></h1>
+              <p></p>
+              <p></p>
+              <a class="btn viewall" href="/"></a>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="four columns">
+            <div class="opportunity">
+              <span class="image image_four"></span>
+              <h2></h2>
+              <p></p>
+              <p></p>
+              <a class="btn viewall" href="/"></a>
+            </div>
+            <div class="opportunity">
+              <span class="image image_five"></span>
+              <h2></h2>
+              <p></p>
+              <p></p>
+              <a class="btn viewall" href="/"></a>
+            </div>
+            <div class="opportunity">
+              <span class="image image_six"></span>
+              <h2></h2>
+              <p></p>
+              <p></p>
+              <a class="btn viewall" href="/"></a>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="four columns">
+            <div class="opportunity">
+              <span class="image image_seven"></span>
+              <h2></h2>
+              <p></p>
+              <p></p>
+              <a class="btn viewall" href="/"></a>
+            </div>
+            <div class="opportunity">
+              <span class="image image_eight"></span>
+              <h2></h2>
+              <p></p>
+              <p></p>
+              <a class="btn viewall" href="/"></a>
+            </div>
+            <div class="opportunity">
+              <span class="image image_nine"></span>
+              <h2></h2>
+              <p></p>
+              <p></p>
+              <a class="btn viewall" href="/"></a>
+            </div>
+          </div>
+        </div>
+        <div class="page_numbers">
+          <a href="#" class="previous">Prev</a>
+          <a class="page_number">1</a>
+          <a class="page_number">2</a>
+          <a class="page_number">3</a>
+          <a class="page_number">&hellip;</a>
+          <a class="page_number">10</a>
+          <a href="#" class="next">Next</a>
+        </div>
+        <a class="advert">Uber</a>
+      </div>
+    </section>
+
+    <section class="footer_banner">
+      <div class="container">
+
+      </div>
+    </section>
+
+    <!-- Footer
+    –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="three columns">
+            <h2>Membership</h2>
+            <ul>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+          </div>
+          <div class="three columns">
+            <h2>Sailing</h2>
+            <ul>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+          </div>
+          <div class="three columns">
+            <h2>Information</h2>
+            <ul>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+          </div>
+          <div class="three columns">
+            <h2>Contact</h2>
+            <ul>
+              <li><i class="fa fa-envelope" aria-hidden="true"></i>Email Us</li>
+              <li><i class="fa fa-phone" aria-hidden="true"></i>+44 (0) 238 115 9207</li>
+              <li>
+                <i class="fa fa-facebook" aria-hidden="true"></i>
+                <i class="fa fa-twitter" aria-hidden="true"></i>
+                <i class="fa fa-linkedin" aria-hidden="true"></i>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+  <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta charset="utf-8">
-  <title>OneSpaceMedia</title>
-  <meta name="description" content="Micro Task">
-  <meta name="author" content="Eik Hunter">
-
-  <!-- Mobile Specific Metas
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- FONT
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-
-  <!-- CSS
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="stylesheet" href="css/styles.css">
-
-  <!-- Favicon
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href="images/favicon.png">
-
-</head>
-<body>
-
-<!-- Primary Page Layout
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<div class="container">
-  <div class="row">
-    <div class="one-half column" style="margin-top: 25%">
-      <h4>Basic Page</h4>
-      <p>This index.html page is a placeholder with the CSS, font and favicon. It's just waiting for you to add some content! If you need some help hit up the <a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
-    </div>
-  </div>
-</div>
-
-<!-- End Document
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->
-</body>
+  </body>
 </html>
