--- a/index.html
+++ b/index.html
@@ -40,24 +40,26 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <header>
       <nav>
-        <a class="logo u-pull-left" href="/">Crewseekers</a>
-        <p class="telephone">+44 (0) 238 115 9207</p>
-        <a class="btn joinbutton">Join Now</a>
-        <a class="btn loginbutton">Login</a>
-        <p class="navigate">Navigate</p>
-        <button class="hamburger" type="button">
-          <span class="hamburger-box">
-            <span class="hamburger-inner"></span>
-          </span>
-        </button>
+        <div class="container">
+          <a class="logo u-pull-left" href="/">Crewseekers</a>
+          <div class="user u-pull-right">
+            <a class="telephone">+44 (0) 238 115 9207</a>
+            <a class="btn joinbutton">Join Now</a>
+            <a class="btn loginbutton">Login</a>
+            <a class="navigate">Navigate</a>
+          </div>
+        </div>
       </nav>
     </header>
 
     <!-- Primary Page Layout
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <section class="header_banner">
-      <div class="container">
-
+      <div class="overlay">
+        <div class="container">
+          <h1>Sailing Opportunities</h1>
+          <h2>Current Sailing Opportunities</h2>
+        </div>
       </div>
     </section>
 
@@ -66,19 +68,19 @@
         <div class="row">
           <div class="eight columns">
             <select>
-              <option value="volvo">Example 1</option>
+              <option value="volvo">All trip types</option>
               <option value="saab">Example 2</option>
               <option value="mercedes">Example 3</option>
               <option value="audi">Example 4</option>
             </select>
             <select>
-              <option value="volvo">Example 1</option>
+              <option value="volvo">All locations</option>
               <option value="saab">Example 2</option>
               <option value="mercedes">Example 3</option>
               <option value="audi">Example 4</option>
             </select>
             <select>
-              <option value="volvo">Example 1</option>
+              <option value="volvo">All qualifications</option>
               <option value="saab">Example 2</option>
               <option value="mercedes">Example 3</option>
               <option value="audi">Example 4</option>
