--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <section class="header_banner">
       <div class="container">
-        <div class="text wow fadeInUp data-wow-duration="10s"">
+        <div class="text">
           <h1>Sailing Opportunities</h1>
           <h2>Current Sailing Opportunities</h2>
           <p>All of our amazing sailing opportunities are free to browse. <a href="/">Join Crewseekers</a> to make contact with Skippers.</p>
@@ -106,7 +106,7 @@
       <div class="container">
         <div class="results">
           <p class="u-pull-left">52 sailing opportunities found All trip types : All locations : All qualifications</p>
-          <div class="u-pull-right">
+          <div class="u-pull-right buttons">
             <a href="#" class="btn previous">Prev</a>
             <a href="#" class="btn next">Next</a>
           </div>
@@ -118,7 +118,7 @@
       <div class="container">
         <div class="row">
           <div class="four columns">
-            <div class="opportunity">
+            <div class="opportunity hvr-grow">
               <span class="image image_one"></span>
               <div class="text">
                 <h2>The Bahamas-Nassau or Georgetown to the BVI</h2>
@@ -129,7 +129,7 @@
             </div>
           </div>
           <div class="four columns">
-            <div class="opportunity">
+            <div class="opportunity hvr-grow">
               <span class="image image_two"></span>
               <div class="text">
                 <h2>Cruising from Vancouver BC Sep 2017 to Mexico & Central America</h2>
@@ -140,7 +140,7 @@
             </div>
           </div>
           <div class="four columns">
-            <div class="opportunity">
+            <div class="opportunity hvr-grow">
               <span class="image image_three"></span>
               <div class="text">
                 <h2>Sailing the Med and the Balearics</h2>
@@ -153,7 +153,7 @@
         </div>
         <div class="row wow fadeInUp">
           <div class="four columns">
-            <div class="opportunity">
+            <div class="opportunity hvr-grow">
               <span class="image image_four"></span>
               <div class="text">
                 <h2>Channel Islands to Caribbean via Gibraltar</h2>
@@ -164,7 +164,7 @@
             </div>
           </div>
           <div class="four columns">
-            <div class="opportunity">
+            <div class="opportunity hvr-grow">
               <span class="image image_five"></span>
               <div class="text">
                 <h2>Algarve/Mediterranean Sailing</h2>
@@ -175,7 +175,7 @@
             </div>
           </div>
           <div class="four columns">
-            <div class="opportunity">
+            <div class="opportunity hvr-grow">
               <span class="image image_six"></span>
               <div class="text">
                 <h2>Algarve/Mediterranean Sailing</h2>
@@ -188,7 +188,7 @@
         </div>
         <div class="row wow fadeInUp">
           <div class="four columns">
-            <div class="opportunity">
+            <div class="opportunity hvr-grow">
               <span class="image image_seven"></span>
               <div class="text">
                 <h2>Canary Islands to Los Angeles on famous ex-racing sail boat</h2>
@@ -199,7 +199,7 @@
             </div>
           </div>
           <div class="four columns">
-            <div class="opportunity">
+            <div class="opportunity hvr-grow">
               <span class="image image_eight"></span>
               <div class="text">
                 <h2>Daysails and Catalina excursions from Marina del Rey</h2>
@@ -210,7 +210,7 @@
             </div>
           </div>
           <div class="four columns">
-            <div class="opportunity yacht-advert">
+            <div class="opportunity yacht-advert hvr-grow">
               <div class="text">
                 <p>Advertisment</p>
                 <h2>Join a yacht racing crew</h2>
@@ -249,40 +249,40 @@
           <div class="three columns">
             <h2>Membership</h2>
             <ul>
-              <li>Register/Signup</li>
-              <li>Post sailing opportunity</li>
-              <li>Renew membership</li>
-              <li>Gift membership</li>
+              <li><a href="/">Register/Signup</a></li>
+              <li><a href="/">Post sailing opportunity</a></li>
+              <li><a href="/">Renew membership</a></li>
+              <li><a href="/">Gift membership</a></li>
             </ul>
           </div>
           <div class="three columns">
             <h2>Sailing</h2>
             <ul>
-              <li>Search sailing opportunities</li>
-              <li>Testimonials</li>
-              <li>Travel and safety</li>
-              <li>Insurance</li>
+              <li><a href="/">Search sailing opportunities</a></li>
+              <li><a href="/">Testimonials</a></li>
+              <li><a href="/">Travel and safety</a></li>
+              <li><a href="/">Insurance</a></li>
             </ul>
           </div>
           <div class="three columns">
             <h2>Information</h2>
             <ul>
-              <li>About us</li>
-              <li>FAQs</li>
-              <li>Useful links</li>
-              <li>Help and support</li>
+              <li><a href="/">About us</a></li>
+              <li><a href="/">FAQs</a></li>
+              <li><a href="/">Useful links</a></li>
+              <li><a href="/">Help and support</a></li>
             </ul>
           </div>
           <div class="three columns">
             <h2>Contact</h2>
             <ul>
-              <li><i class="fa fa-envelope" aria-hidden="true"></i>Email Us</li>
-              <li><i class="fa fa-phone" aria-hidden="true"></i>+44 (0) 238 115 9207</li>
-              <li>
+              <li><a href="/"><i class="fa fa-envelope" aria-hidden="true"></i>    Email Us</a></li>
+              <li><a href="/"><i class="fa fa-phone" aria-hidden="true"></i>   +44 (0) 238 115 9207</a></li>
+              <div class="social-media">
                 <i class="fa fa-facebook" aria-hidden="true"></i>
                 <i class="fa fa-twitter" aria-hidden="true"></i>
                 <i class="fa fa-linkedin" aria-hidden="true"></i>
-              </li>
+              </div>
             </ul>
           </div>
         </div>
@@ -296,14 +296,21 @@
   <!-- Scripts
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <script src="https://use.fontawesome.com/cd4dbaf2d1.js"></script>
+
   <script src="js/wow.min.js"></script>
+
   <script>
   new WOW().init();
   </script>
+
   <script>
   var hamburger = document.querySelector(".hamburger");
   hamburger.addEventListener("click", function() {
   hamburger.classList.toggle("is-active");
   });
+
+  window.onbeforeunload = function () {
+  window.scrollTo(0, 0);
+  }
   </script>
 </html>
